--- a/templates/actor/actorDH-sheet.html
+++ b/templates/actor/actorDH-sheet.html
@@ -11,7 +11,7 @@
             <a class="item skillTab" data-tab="skills">SKILLS</a>
             <a class="item" data-tab="tnt">Talents & Traits</a>
             <a class="item" data-tab="gear">Gear & Cybernetics</a>
-            <a class="item" data-tab="exp">Exp & Mmissions</a>
+            <a class="item" data-tab="exp">Exp & Missions</a>
             
             
             <a class="item" data-tab="psykana">Psykana</a>
