--- a/templates/actor/knightHouse-sheet.html
+++ b/templates/actor/knightHouse-sheet.html
@@ -40,6 +40,10 @@
                             <input type="text" class="combat-resources" data-target="data.alliances.houseType" value="{{data.alliances.houseType}}"placeholder="Type" data-dtype="String"/>
                         </div>
                         <div class=" flexcol">
+                            <span class="descrSpan">House Colors:</span>
+                            <input type="text" class="combat-resources" data-target="data.colors.value" value="{{data.colors.value}}"placeholder="Colors" data-dtype="String"/>
+                        </div>
+                        <div class=" flexcol">
                             <span class="descrSpan">House Alliance:</span>
                             <input type="text" class="combat-resources" data-target="data.alliances.recentAlliance" value="{{data.alliances.recentAlliance}}"placeholder="Faction" data-dtype="String"/>
                         </div>
