--- a/templates/item/item-knightArmor-sheet.html
+++ b/templates/item/item-knightArmor-sheet.html
@@ -21,6 +21,10 @@
         <input type="text" value="{{data.weightRatio.value}}" name="data.weightRatio.value">
     </div>
     <div class="flexcol">
+        <label>Armor mod:</label>
+        <input type="text" value="{{data.armor.mod}}" name="data.armor.mod">
+    </div>
+    <div class="flexcol">
         <label>Item Quality:</label>
 
         <select class="quality"  name="data.quality.value">
