--- a/templates/item/item-knightStructure-sheet.html
+++ b/templates/item/item-knightStructure-sheet.html
@@ -17,6 +17,10 @@
         <input type="text" value="{{data.space.value}}" name="data.space.value">
     </div>
     <div class="flexcol">
+        <label>Space Increase:</label>
+        <input type="text" value="{{data.space.mod}}" name="data.space.mod">
+    </div>
+    <div class="flexcol">
         <label>Structural Integrity Modifier:</label>
         <input type="text" value="{{data.SI.mod}}" name="data.SI.mod">
     </div>
