--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -223,7 +223,7 @@
 }
 .vehicle-categories{
     align-self:flex-start;
-    height: -webkit-fill-available;
+    height: auto;
 }
 .fortyk  .characteristics{
     margin-top:5px;
@@ -250,7 +250,8 @@
     width:100%;
     height:100%;
 }
-.fortyk nav.sheet-tabs {
+.sheet nav.sheet-tabs {
+    height:auto !important; 
     -webkit-box-flex: 1;
     margin-top: 0px;
     font-variant-caps: petite-caps;
