--- a/templates/actor/actor-combat.html
+++ b/templates/actor/actor-combat.html
@@ -512,14 +512,18 @@
                 </select>
                 <div class="flexcol">
                     <span class="section-title">Cover</span>
-                    <span class="cover-reset button">Reset Cover</span>
-                    <input type="text"  title="cover" name="data.secChar.cover.value" value="{{data.secChar.cover.value}}" data-dtype="Number"/>
+                    <select class="cover"  name="data.secChar.cover.value">
+                        {{#select data.secChar.cover.value}}
+                        {{#each coverTypes}}
+                        <option value="{{value}}">{{label}}</option>
+                        {{/each}}
+                        {{/select}}
+                    </select>
                     <div class="flexrow flex-group-center">
                         <div class="armor flexcol flex-group-center">
 
                             <span>Head</span>
                             <span>(1-10)</span>
-                            <input type="checkbox" class="combat-resources" title="cover" name="data.characterHitLocations.head.cover" {{checked data.characterHitLocations.head.cover}}>
                             <span title="Armor">{{data.characterHitLocations.head.armor}}</span>
                             <span title="Total Soak">{{data.characterHitLocations.head.value}}</span>
                         </div>
@@ -529,24 +533,21 @@
                         <div class="armor flexcol flex-group-center">
 
                             <span>Left Arm</span>
-                            <span>(21-30)</span>
-                            <input type="checkbox" class="combat-resources" title="cover" name="data.characterHitLocations.lArm.cover" {{checked data.characterHitLocations.lArm.cover}}>                           
+                            <span>(21-30)</span>                       
                             <span title="Armor">{{data.characterHitLocations.lArm.armor}}</span>
                             <span title="Total Soak">{{data.characterHitLocations.lArm.value}}</span>
                         </div>
                         <div class="armor flexcol flex-group-center">
 
                             <span>Body</span>
-                            <span>(31-70)</span>
-                            <input type="checkbox" class="combat-resources" title="cover" name="data.characterHitLocations.body.cover" {{checked data.characterHitLocations.body.cover}}>                            
+                            <span>(31-70)</span>                         
                             <span title="Armor">{{data.characterHitLocations.body.armor}}</span>
                             <span title="Total Soak">{{data.characterHitLocations.body.value}}</span>
                         </div>
                         <div class="armor flexcol flex-group-center">
 
                             <span>Right Arm</span>
-                            <span>(11-20)</span>
-                            <input type="checkbox" class="combat-resources" title="cover" name="data.characterHitLocations.rArm.cover" {{checked data.characterHitLocations.rArm.cover}}>                            
+                            <span>(11-20)</span>                          
                             <span title="Armor">{{data.characterHitLocations.rArm.armor}}</span>
                             <span title="Total Soak">{{data.characterHitLocations.rArm.value}}</span>
                         </div>
@@ -557,7 +558,6 @@
 
                             <span>Left Leg</span>
                             <span>(71-85)</span>
-                            <input type="checkbox" class="combat-resources" title="cover" name="data.characterHitLocations.lLeg.cover" {{checked data.characterHitLocations.lLeg.cover}}>
                             <span title="Armor" >{{data.characterHitLocations.lLeg.armor}}</span>
                             <span title="Total Soak">{{data.characterHitLocations.lLeg.value}}</span>
                         </div>
@@ -565,7 +565,6 @@
 
                             <span>Right Leg</span>
                             <span>(86-100)</span>
-                            <input type="checkbox" class="combat-resources" title="cover" name="data.characterHitLocations.rLeg.cover" {{checked data.characterHitLocations.rLeg.cover}}>
                             <span title="Armor" >{{data.characterHitLocations.rLeg.armor}}</span>
                             <span title="Total Soak">{{data.characterHitLocations.rLeg.value}}</span>
                         </div>
