--- a/templates/actor/actor-combat.html
+++ b/templates/actor/actor-combat.html
@@ -286,7 +286,7 @@
                 {{#unless (contains this.data.data.class.value "thrown")}}
                 <div class="list-item ammo-list">
 
-                    <label>Remaining Ammo:</label>
+                    <label>Current Ammo:</label>
                     <select class="weapon-ammo" data-weapon="{{this.id}}" data-previous="{{this.data.data.ammo._id}}">
 
                         {{#select this.data.data.ammo._id}}
