--- a/templates/actor/knight-sheet.html
+++ b/templates/actor/knight-sheet.html
@@ -4,11 +4,11 @@
     <header class="sheet-header flexrow">
         
        
-        <nav class="sheet-tabs tabs grid grid-2col" data-group="primary">
+        <nav class="sheet-tabs tabs grid grid-3col" data-group="primary">
             
             <a class="item bat" data-tab="mechbay">Enginarium</a>
-            <a class="item bat" data-tab="combat">Combat</a>
-            
+            <a class="item bat" data-tab="combat2">Combat</a>
+            <a class="item bat" data-tab="traits">Traits</a>
             
             
             
@@ -27,8 +27,11 @@
             {{> "systems/fortyk/templates/actor/knightParts/mech-bay.html"}}
         </div>
 
-        <div class="tab combat"  data-group="primary" data-tab="combat">
+        <div class="tab combat2"  data-group="primary" data-tab="combat2">
             {{> "systems/fortyk/templates/actor/knightParts/combat.html"}}
+        </div>
+        <div class="tab traits"  data-group="primary" data-tab="traits">
+            {{> "systems/fortyk/templates/actor/knightParts/traits.html"}}
         </div>
         
       
