--- a/templates/item/item-ammunition-sheet.html
+++ b/templates/item/item-ammunition-sheet.html
@@ -14,6 +14,10 @@
             <input type="text" value="{{data.weight.value}}" name="data.weight.value">
         </div>
         <div class="flexcol">
+        <label>Space:</label>
+        <input type="text" value="{{data.space.value}}" name="data.space.value">
+    </div>
+        <div class="flexcol">
             <label>Rarity:</label>
             <select class="power-type" name="data.rarity.value">
                 {{#select data.rarity.value}}
@@ -46,6 +50,10 @@
         <div class="flexcol">
             <label>Penetration:</label>
             <input type="text" value="{{data.pen.formula}}" name="data.pen.formula">
+        </div>
+         <div class="flexcol">
+            <label>Range:</label>
+            <input type="text" value="{{data.range.formula}}" name="data.range.formula">
         </div>
         <div class="flexcol">
             <a class="special button">Special</a>
