--- a/templates/actor/actorDH-sheet.html
+++ b/templates/actor/actorDH-sheet.html
@@ -8,7 +8,7 @@
         <nav class="sheet-tabs tabs grid grid-3col" data-group="primary">
             
             <a class="item" data-tab="main">Main</a>
-            <a class="item skillTab" data-tab="skills">SKILLS</a>
+            <a class="item skillTab" data-tab="skills">Skills</a>
             <a class="item" data-tab="tnt">Talents & Traits</a>
             <a class="item" data-tab="gear">Gear & Cybernetics</a>
             <a class="item" data-tab="exp">Exp & Missions</a>
