--- a/templates/actor/actorDH-main.html
+++ b/templates/actor/actorDH-main.html
@@ -3,7 +3,7 @@
         <div class="descr grid grid-3col">
             <div class="descrRow flexcol">
                 <span class="descrSpan">Name:</span>
-                <input type="text" class="combat-resources" data-target="name" value="{{actor.name}}" data-dtype="Number"/>
+                <input type="text" class="combat-resources" data-target="name" value="{{actor.name}}" data-dtype="String"/>
             </div>
 
             <div class="descrRow flexcol">
@@ -28,53 +28,53 @@
 
             <div class="descrRow flexcol">
                 <span class="descrSpan">Build:</span>
-                <input type="text" class="combat-resources" data-target="data.build.value" value="{{data.build.value}}" data-dtype="Number"/>
+                <input type="text" class="combat-resources" data-target="data.build.value" value="{{data.build.value}}" data-dtype="String"/>
             </div>
 
             <div class="descrRow flexcol">
                 <span class="descrSpan">Hair:</span>
-                <input type="text" class="combat-resources" data-target="data.hair.value" value="{{data.hair.value}}" data-dtype="Number"/>
+                <input type="text" class="combat-resources" data-target="data.hair.value" value="{{data.hair.value}}" data-dtype="String"/>
             </div>
 
             <div class="descrRow flexcol">
                 <span class="descrSpan">Eye:</span>
-                <input type="text" class="combat-resources" data-target="data.eye.value" value="{{data.eye.value}}" data-dtype="Number"/>
+                <input type="text" class="combat-resources" data-target="data.eye.value" value="{{data.eye.value}}" data-dtype="String"/>
             </div>
             <div class="descrRow flexcol">
                 <span class="descrSpan">Quirks:</span>
-                <input type="text" class="combat-resources" data-target="data.quirks.value" value="{{data.quirks.value}}" data-dtype="Number"/>
+                <input type="text" class="combat-resources" data-target="data.quirks.value" value="{{data.quirks.value}}" data-dtype="String"/>
             </div>
             <div class="descrRow flexcol">
                 <span class="descrSpan">Superstitions:</span>
-                <input type="text" class="combat-resources" data-target="data.superstitions.value" value="{{data.superstitions.value}}" data-dtype="Number"/>
+                <input type="text" class="combat-resources" data-target="data.superstitions.value" value="{{data.superstitions.value}}" data-dtype="String"/>
             </div>
             <div class="descrRow flexcol">
                 <span class="descrSpan">Momentos:</span>
-                <input type="text" class="combat-resources" data-target="data.momentos.value" value="{{data.momentos.value}}" data-dtype="Number"/>
+                <input type="text" class="combat-resources" data-target="data.momentos.value" value="{{data.momentos.value}}" data-dtype="String"/>
             </div>
 
         </div>
         <div class="descr grid grid-3col">
             <div class="descrRow flexcol">
                 <span class="descrSpan">Homeworld:</span>
-                <input type="text" class="combat-resources" data-target="data.homeWorld.value" value="{{data.homeWorld.value}}" data-dtype="Number"/>
+                <input type="text" class="combat-resources" data-target="data.homeWorld.value" value="{{data.homeWorld.value}}" data-dtype="String"/>
             </div>
             <div class="descrRow flexcol">
                 <span class="descrSpan">Background:</span>
-                <input type="text" class="combat-resources" data-target="data.background.value" value="{{data.background.value}}" data-dtype="Number"/>
+                <input type="text" class="combat-resources" data-target="data.background.value" value="{{data.background.value}}" data-dtype="String"/>
             </div>
             <div class="descrRow flexcol">
                 <span class="descrSpan">Role:</span>
-                <input type="text" class="combat-resources" data-target="data.role.value" value="{{data.role.value}}" data-dtype="Number"/>
+                <input type="text" class="combat-resources" data-target="data.role.value" value="{{data.role.value}}" data-dtype="String"/>
             </div>
 
         </div>
         <div class="eliteAdvances flexcol">
             <div><span class="descrSpan">Elite Advances:</span>
-                <input type="text" class="combat-resources" data-target="data.eliteAdvances.value" value="{{data.eliteAdvances.value}}" data-dtype="Number"/>
+                <input type="text" class="combat-resources" data-target="data.eliteAdvances.value" value="{{data.eliteAdvances.value}}" data-dtype="String"/>
                 <div>
                     <span class="descrSpan">Divination:</span>
-                    <input type="text" class="combat-resources" data-target="data.divination.value" value="{{data.divination.value}}" data-dtype="Number"/>
+                    <input type="text" class="combat-resources" data-target="data.divination.value" value="{{data.divination.value}}" data-dtype="String"/>
 
                 </div>
 
