--- a/templates/item/item-injury-sheet.html
+++ b/templates/item/item-injury-sheet.html
@@ -2,7 +2,10 @@
  <header class="sheet-header">
         <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{name}}"/>
         
-    </header>    
+    </header>   
+    {{#if isGM}}
+    <label class="button clone">Copy Item</label>
+    {{/if}}
     <div class="flexcol">
         <label>Name:</label>
         <input type="text" value="{{name}}" name="name">
