--- a/templates/item/item-knightStructure-sheet.html
+++ b/templates/item/item-knightStructure-sheet.html
@@ -4,24 +4,24 @@
         <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{name}}"/>
 
     </header>
+    {{#if isGM}}
+    <label class="button clone">Copy Item</label>
+    {{/if}}
     <div class="flexcol">
         <label>Name:</label>
         <input type="text" value="{{name}}" name="name">
     </div>
+    
     <div class="flexcol">
-        <label>Tonnage:</label>
-        <input type="text" value="{{data.weight.value}}" name="data.weight.value">
-    </div>
-    <div class="flexcol">
-        <label>Space:</label>
+        <label>Space taken % (0.%):</label>
         <input type="text" value="{{data.space.value}}" name="data.space.value">
     </div>
     <div class="flexcol">
-        <label>Space Increase:</label>
+        <label>Space Increase % (1.%):</label>
         <input type="text" value="{{data.space.mod}}" name="data.space.mod">
     </div>
     <div class="flexcol">
-        <label>Structural Integrity Modifier:</label>
+        <label>Structural Integrity Modifier % (1.%):</label>
         <input type="text" value="{{data.SI.mod}}" name="data.SI.mod">
     </div>
     <div class="flexcol">
