--- a/templates/item/item-skill-sheet.html
+++ b/templates/item/item-skill-sheet.html
@@ -5,6 +5,9 @@
         <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{name}}"/>
         
     </header>
+        {{#if isGM}}
+    <label class="button clone">Copy Item</label>
+    {{/if}}
         <div class="flexcol">
             <label>Skill Type:</label>
             <select class="skill-type" name="data.parent.value">
