fixed item copy thingy

--- a/templates/actor/spaceship-sheet.html
+++ b/templates/actor/spaceship-sheet.html
@@ -212,19 +212,19 @@
                 <label for="data.secChar.space.value" class="resource-label">Weapon slots</label>
                 <div class="resource-content flexrow flex-center flex-between">
                     <div class="flexcol"> Dorsal: 
-                        <input type="text" class="combat-resources" name="data.weaponCapacity.dorsal" value="{{data.weaponCapacity.dorsal}}" data-dtype="Number"/></div>
+                        <input type="text"  name="data.weaponCapacity.dorsal" value="{{data.weaponCapacity.dorsal}}" data-dtype="Number"/></div>
 
                     <div class="flexcol"> Prow: 
-                        <input type="text" class="combat-resources" name="data.weaponCapacity.prow" value="{{data.weaponCapacity.prow}}" data-dtype="Number"/></div>
+                        <input type="text"  name="data.weaponCapacity.prow" value="{{data.weaponCapacity.prow}}" data-dtype="Number"/></div>
 
                     <div class="flexcol">Keel: 
-                        <input type="text" class="combat-resources" name="data.weaponCapacity.keel" value="{{data.weaponCapacity.keel}}" data-dtype="Number"/></div>
+                        <input type="text"  name="data.weaponCapacity.keel" value="{{data.weaponCapacity.keel}}" data-dtype="Number"/></div>
 
                     <div class="flexcol">Port: 
-                        <input type="text" class="combat-resources" name="data.weaponCapacity.port" value="{{data.weaponCapacity.port}}" data-dtype="Number"/></div>
+                        <input type="text" name="data.weaponCapacity.port" value="{{data.weaponCapacity.port}}" data-dtype="Number"/></div>
 
                     <div class="flexcol">Starboard: 
-                        <input type="text" class="combat-resources" name="data.weaponCapacity.starboard" value="{{data.weaponCapacity.starboard}}" data-dtype="Number"/></div>
+                        <input type="text"  name="data.weaponCapacity.starboard" value="{{data.weaponCapacity.starboard}}" data-dtype="Number"/></div>
 
                 </div>
             </div>
