--- a/templates/item/item-meleeWeapon-sheet.html
+++ b/templates/item/item-meleeWeapon-sheet.html
@@ -131,9 +131,9 @@
             <input type="text" value="{{data.weight.value}}" name="data.weight.value">
         </div>
         <div class="flexcol">
-                    <label>Test Mod:</label>
-                    <input type="text" value="{{data.testMod.value}}" name="data.testMod.value">
-                </div>
+            <label>Test Mod:</label>
+            <input type="text" class="weapon-mod" value="{{data.testMod.value}}" data-target="data.testMod.value" data-dtype="Number">
+        </div>
     </div>
     <div class="item-description">
         <label>Description:</label>
