--- a/templates/actor/knightParts/ranged-weapon-template.html
+++ b/templates/actor/knightParts/ranged-weapon-template.html
@@ -6,6 +6,7 @@
     <div class="list-item">
         <span>Attack: </span> 
         {{#if (greaterThan this.data.data.clip.value 0)}}
+        {{debug ../../this}}
         <span class="ranged-attack rollable button" data-roll-type="rangedAttack" data-target="{{../../data.crew.bs}}" data-item-id="{{this.id}}" data-label="Ranged Attack" data-char="">Roll</span>
         {{else}}
         {{#if this.data.data.ammo._id}}
